# iqai

./: .gitattributes  .gitignore  COMMANDS.md  Cargo.toml  USAGE.md  config.json  config.json.example  watchlist.json  watchlist.json.example
crates/iqai-binance/: Cargo.toml
crates/iqai-binance/src/: futures.rs  http_retry.rs  lib.rs  sign.rs  spot.rs
crates/iqai-cli/: Cargo.toml
crates/iqai-cli/src/: main.rs
crates/iqai-core/: Cargo.toml
crates/iqai-core/src/: aggregate.rs  analysis_snapshot.rs  app_config.rs  auto_trader.rs  backtest.rs  binance_error.rs  candlestick_patterns.rs  classic_patterns.rs  config.rs  dip_confluence.rs  dip_tepe_scoring.rs  elliott.rs  elliott_detector.rs  elliott_fusion.rs  exchange.rs  fake_breakout.rs  hash_util.rs  impulse_detector.rs  indicators.rs  lib.rs  logging.rs  market_context.rs  position_rca.rs  q_radar_analysis.rs  reversal.rs  signal.rs  sli.rs  smart_money.rs  strategy.rs  strategy_engine.rs  trace_context.rs  trade_db.rs  trade_manager.rs  types.rs
crates/iqai-gui/: Cargo.toml  README.md
crates/iqai-gui/src/: main.rs
crates/iqai-tv/: Cargo.toml
crates/iqai-tv/src/: client.rs  lib.rs  native.rs
crates/iqai-web/: Cargo.toml  docs_swagger.html  openapi.yaml
crates/iqai-web/fonts/: README.md
crates/iqai-web/src/: ai.rs  api_json.rs  api_spec.rs  chart_data.rs  http_app.rs  index.html  lib.rs  main.rs  metrics.html  notify.rs  pnl.html  q_analiz.html  q_analiz_card.rs  q_setup_card.rs  settings.html  snapshots.html  trade_close_card.rs  trade_open_card.rs
crates/iqai-web/tests/: http_smoke.rs
docs/: ACIK_POZISYON_SURECI.md  AI_EXPLANATIONS.md  ALERT_TIERS.md  ANALIZ_SNAPSHOT_KULLANIM.md  ANALIZ_SNAPSHOT_TABLO_ALANLARI.md  ANALYSIS_DATA_LAYERS.md  API_ERRORS.md  API_Q_ANALYSIS.md  BACKTEST_TRADE_MANAGEMENT.md  CHART_OVERLAY_AYARLARI.md  CONFIG_OVERRIDES.md  DEV_TO_PROD_DEPLOY.md  DIP_TEPE_KOD_DEGERLENDIRME.md  DIP_TEPE_VE_WYCKOFF_REFERANS.md  DIP_TEPE_YORUM_VE_KARSILASTIRMA.md  DIP_TESPITI_KATMANLAR.md  EKSIK_HATA_IYILESTIRME_OZETI.md  ELLIOTT_CODE_REVIEW_AND_PLAN.md  ELLIOTT_WAVE_SPEC.md  EW_CONTENT_PDF_2_5_3_2_5_4_KOD_ESLEME.md  EW_CONTENT_TXT_2_5_3_2_5_4_KOD_ESLEME.md  HTTP_RETRY_AFTER.md  LOG_SAMPLING.md  OPENAPI.md  OPERATIONS_GOVERNANCE.md  PINE_EW_SMC_FUSION_PORT_ANALYSIS.md  PLAN_VE_YOL_HARITASI.md  POSTMORTEM_TEMPLATE.md  PROJE_DOKUMANTASYONU.md  PROMETHEUS_ALERT_EXAMPLES.md  Q_ANALIZ_ALANLARI.md  Q_ANALIZ_DETAYLI_DOKUMANTASYON.md  Q_ANALIZ_DIP_TEPE_YONTEM.md  Q_ANALIZ_SUANKI_INCELEME.md  Q_ANALIZ_WYCKOFF_POZ_KORUMA_CEVAP.md  SLI_METRICS.md  TELEGRAM_Q_ANALIZ_SPAM.md  THE_BASICS_OF_THE_ELLIOTT_WAVE_PRINCIPLE.txt  TODO_PLAN.md  TRACING.md  (+7 more)
docs/systemd/: iqai-stack.service
scripts/: README.md  git-prod-reset.sh  git-pull.sh  git-push.sh
