[package]
name = "iqai-binance"
version = "0.1.0"
edition = "2021"
description = "Binance Spot and Futures API connector"

[dependencies]
iqai-core = { path = "../iqai-core" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
