[package]
name = "iqai-core"
version = "0.1.0"
edition = "2021"
description = "Core trading logic, indicators, and Smart Money Structure engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
