[package]
name = "iqai-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for chart visualization and monitoring"

[[bin]]
name = "iqai-gui"
path = "src/main.rs"

[dependencies]
iqai-core = { path = "../iqai-core" }
iqai-binance = { path = "../iqai-binance" }
eframe = { version = "0.28", default-features = false, features = ["default_fonts"] }
egui = "0.28"
egui_plot = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
