[package]
name = "iqai-web"
version = "0.1.0"
edition = "2021"
description = "Web GUI for Smart Money Structure"

[[bin]]
name = "iqai-web"
path = "src/main.rs"

[dependencies]
iqai-core = { path = "../iqai-core" }
iqai-binance = { path = "../iqai-binance" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
