[package]
name = "iqai-web"
version = "0.1.0"
edition = "2021"
description = "Web GUI for Smart Money Structure"

[lib]
name = "iqai_web"
path = "src/lib.rs"

[[bin]]
name = "iqai-web"
path = "src/main.rs"

[dependencies]
iqai-core = { path = "../iqai-core" }
iqai-binance = { path = "../iqai-binance" }
iqai-tv = { path = "../iqai-tv" }
axum = { version = "0.7", features = ["json"] }
http = "1"
tower-http = { version = "0.5", features = ["cors", "request-id"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
log = "0.4"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
